--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'styles/colors';
+@import 'styles/variables';
+
+@import 'styles/components/header';
+@import 'styles/components/layout';
+@import 'styles/components/team-info';
+@import 'styles/components/button';
+
+body {
+  margin: 0;
+}
