--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,3 +1,8 @@
+
+/*
+To change this file, you need a very good reason. Try to avoid adding a new color.
+*/
+
 $background-border-1: var(--background-border-1, #ffffff);
 $background-border-2: var(--background-border-2, #FAFAFA);
 $background-border-3: var(--background-border-3, #EEEEEE);
